--- a/index.html
+++ b/index.html
@@ -1,63 +1,121 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Aarti Panchal | QA Engineer</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Aarti Panchal | Portfolio</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background-color: #f5f5f5;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      background-color: #f9f9f9;
+      color: #333;
     }
-    h1 {
-      color: #2c3e50;
+
+    header {
+      background-color: #0d47a1;
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
     }
-    .section {
-      background-color: white;
-      padding: 15px;
-      border-radius: 10px;
-      margin-bottom: 20px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
     }
-    a {
-      color: #007bff;
+
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1.1rem;
+    }
+
+    .container {
+      max-width: 1000px;
+      margin: auto;
+      padding: 2rem 1rem;
+    }
+
+    section {
+      margin-bottom: 2rem;
+    }
+
+    h2 {
+      color: #0d47a1;
+      border-bottom: 2px solid #eee;
+      padding-bottom: 0.3rem;
+    }
+
+    .project {
+      background: white;
+      padding: 1rem;
+      border-radius: 6px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      margin-bottom: 1rem;
+    }
+
+    .contact a {
+      color: #0d47a1;
       text-decoration: none;
+    }
+
+    footer {
+      text-align: center;
+      background-color: #eee;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #666;
     }
   </style>
 </head>
 <body>
-  <h1>Hi, I'm Aarti Kanulal Panchal 👋</h1>
 
-  <div class="section">
-    <h2>About Me</h2>
-    <p>QA Engineer at Context QA (1 year experience), and a BCA student at HNGU University (graduating 2025) from Deesa, Gujarat.</p>
+  <header>
+    <h1>Aarti Panchal</h1>
+    <p>QA Engineer | Web Developer | BCA Student</p>
+  </header>
+
+  <div class="container">
+
+    <section class="about">
+      <h2>About Me</h2>
+      <p>
+        I'm a dedicated QA Engineer with 1 year of professional experience at Context QA, currently pursuing my Bachelor of Computer Application from HNGU University. I specialize in software testing and also enjoy building web projects using HTML, CSS, and JavaScript.
+      </p>
+    </section>
+
+    <section class="projects">
+      <h2>Projects</h2>
+
+      <div class="project">
+        <h3>Online Exam Portal</h3>
+        <p>
+          A web application built using .NET MVC and MS SQL that allows students to take exams online. Includes secure admin panel, real-time results, and user management.
+        </p>
+      </div>
+
+      <div class="project">
+        <h3>Portfolio Website</h3>
+        <p>
+          This responsive site, created using GitHub Pages, showcases my experience, skills, and projects.
+        </p>
+      </div>
+    </section>
+
+    <section class="contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:aartikanulalpanchal@example.com">aartikanulalpanchal@example.com</a></p>
+      <p>GitHub: <a href="https://github.com/aartipanchal" target="_blank">github.com/aartipanchal</a></p>
+    </section>
+
   </div>
 
-  <div class="section">
-    <h2>Skills</h2>
-    <p>HTML, CSS, JavaScript, Python (basic), Manual Testing, API Testing, .NET MVC, MS SQL</p>
-  </div>
+  <footer>
+    &copy; 2025 Aarti Panchal | All Rights Reserved
+  </footer>
 
-  <div class="section">
-    <h2>Projects</h2>
-    <ul>
-      <li><strong>Online Exam Portal</strong> – Built using .NET MVC & MS SQL. Designed login system, student interface, and test result logic.</li>
-    </ul>
-  </div>
-
-  <div class="section">
-    <h2>Experience</h2>
-    <p>1 year QA Engineer at Context QA (Remote). Worked on manual and API testing using tools like Postman.</p>
-  </div>
-
-  <div class="section">
-    <h2>Education</h2>
-    <p>Bachelor of Computer Application – HNGU University (2022–2025)</p>
-  </div>
-
-  <div class="section">
-    <h2>Contact</h2>
-    <p>Email: your-email@example.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/your-link">linkedin.com/in/your-link</a></p>
-  </div>
 </body>
 </html>
