--- a/index.html
+++ b/index.html
@@ -4,72 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Aarti Panchal | Portfolio</title>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-
-    header {
-      background-color: #0d47a1;
-      color: white;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-
-    header p {
-      margin-top: 0.5rem;
-      font-size: 1.1rem;
-    }
-
-    .container {
-      max-width: 1000px;
-      margin: auto;
-      padding: 2rem 1rem;
-    }
-
-    section {
-      margin-bottom: 2rem;
-    }
-
-    h2 {
-      color: #0d47a1;
-      border-bottom: 2px solid #eee;
-      padding-bottom: 0.3rem;
-    }
-
-    .project {
-      background: white;
-      padding: 1rem;
-      border-radius: 6px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      margin-bottom: 1rem;
-    }
-
-    .contact a {
-      color: #0d47a1;
-      text-decoration: none;
-    }
-
-    footer {
-      text-align: center;
-      background-color: #eee;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #666;
-    }
-  </style>
 </head>
 <body>
 
@@ -77,42 +11,15 @@
     <h1>Aarti Panchal</h1>
     <p>QA Engineer | Web Developer | BCA Student</p>
   </header>
+<nav>
+  <ul class="nav-links">
+    <li><a href="#about">About</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
+  </ul>
+</nav>
 
-  <div class="container">
-
-    <section class="about">
-      <h2>About Me</h2>
-      <p>
-        I'm a dedicated QA Engineer with 1 year of professional experience at Context QA, currently pursuing my Bachelor of Computer Application from HNGU University. I specialize in software testing and also enjoy building web projects using HTML, CSS, and JavaScript.
-      </p>
-    </section>
-
-    <section class="projects">
-      <h2>Projects</h2>
-
-      <div class="project">
-        <h3>Online Exam Portal</h3>
-        <p>
-          A web application built using .NET MVC and MS SQL that allows students to take exams online. Includes secure admin panel, real-time results, and user management.
-        </p>
-      </div>
-
-      <div class="project">
-        <h3>Portfolio Website</h3>
-        <p>
-          This responsive site, created using GitHub Pages, showcases my experience, skills, and projects.
-        </p>
-      </div>
-    </section>
-
-    <section class="contact">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:aartikanulalpanchal@example.com">aartikanulalpanchal@example.com</a></p>
-      <p>GitHub: <a href="https://github.com/aartipanchal" target="_blank">github.com/aartipanchal</a></p>
-    </section>
-
-  </div>
-
+ 
   <footer>
     &copy; 2025 Aarti Panchal | All Rights Reserved
   </footer>
