--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Aarti Panchal | Portfolio</title>
-<style href="stylesheet.css" type=""stylesheet"></style>
+<link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 
