--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>QA Engineer | Web Developer | BCA Student</p>
   </header>
 <nav>
-  <ul class="nav-links">
+  <ul class="sidebar">
     <li><a href="#about">About</a></li>
     <li><a href="#projects">Projects</a></li>
     <li><a href="#contact">Contact</a></li>
